--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<style>
+		
+table{
+	border : 1px solid black;
+	background-color: yellow;
+}
+
+th,td{
+	border : 1px solid black;
+}
+	</style>
+	
 	<caption>Student Details</caption>
 	<table>
 		<thead>
