--- a/main.html
+++ b/main.html
@@ -9,14 +9,11 @@
 <body>
 	<style>
 		
-table{
-	border : 1px solid black;
-	background-color: yellow;
+table,th,td{
+	 border : 1px solid black;
+	background-color: yellow; 
 }
 
-th,td{
-	border : 1px solid black;
-}
 	</style>
 	
 	<caption>Student Details</caption>
